--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 certifi==2018.4.16
-click==6.7
+Click==7.0
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
@@ -12,3 +12,6 @@ pytz==2018.5
 six==1.11.0
 SQLAlchemy==1.2.10
 Werkzeug==0.14.1
+wincertstore==0.2
+psycopg2==2.7.6.1
+gunicorn==19.9.0
